fixed show.ejs info/social media alignment

--- a/public/styles-index.css
+++ b/public/styles-index.css
@@ -13,6 +13,14 @@ body {
   font-family: 'Gothic A1', sans-serif;
 }
 
+.info {
+  text-align: left;
+  position: relative;
+  bottom: -423px;
+  background-color: #DEA0A0;
+  padding: 29px;
+}
+
 .followus {
   top: 450px;
   position: relative;
@@ -22,13 +30,16 @@ body {
   padding: 2px;
 }
 
-
-
-#social {
-    width: 100px;
-    height: 50px;
+#followtext {
+  /* display: inline-block; */
+  display: block;
+  bottom: 20px;
+  font-size: 26px;
+  margin-bottom: 2px;
 }
 
-.info {
-    background-color: #DEA0A0;
-  }
+#social {
+  width: 136px;
+  height: 58px;
+  /* display: inline; */
+}
