--- a/public/styles-show.css
+++ b/public/styles-show.css
@@ -34,6 +34,14 @@ body {
     margin-top: 100px;
 }
 
+.info {
+  text-align: left;
+  position: relative;
+  bottom: -423px;
+  background-color: #DEA0A0;
+  padding: 29px;
+}
+
 .followus {
   top: 450px;
   position: relative;
@@ -43,12 +51,16 @@ body {
   padding: 2px;
 }
 
+  #followtext {
+    /* display: inline-block; */
+    display: block;
+    bottom: 20px;
+    font-size: 26px;
+    margin-bottom: 2px;
+  }
 
-#social {
-    width: 100px;
-    height: 50px;
-}
-
-.info {
-    background-color: #DEA0A0;
+  #social {
+    width: 136px;
+    height: 58px;
+    /* display: inline; */
   }
